# song-visualizer

./: .gitignore  CODEX_PROMPT.md  Makefile  README.md  pyproject.toml
benchmark/: songs.json
benchmark/baselines/: baseline_20260323T053719Z.json  baseline_20260323T191325Z.json  baseline_20260323T192327Z.json  latest.json
benchmark/references/die-for-you/: bass.json  drums.json  vocals.json
benchmark/references/do-i-wanna-know/: bass.json  drums.json  vocals.json
benchmark/references/feel-good-inc/: bass.json  bass_notes.mid  drums.json  drums_notes.mid  vocals.json  vocals_notes.mid
benchmark/references/feeling-this/: bass.json  drums.json  vocals.json
benchmark/references/shy-away/: bass.json  drums.json  vocals.json
docs/: 00_project_brief.md  01_roadmap.md  02_architecture.md  03_working_state.md  04_repo_reference.md  05_lyrics_playbook.md  06_reduced_representation.md
docs/research/: README.md  deep-research-report.md  lyrics_syncing_research.md  song-story-research.md  voice-notes-research.md
experiments/: README.md  compare_stems.py  compare_stems_diwk.py
experiments/results/do_i_wanna_know/: comparison.json
experiments/results/do_i_wanna_know/demucs_htdemucs/: pitch_track.json
experiments/results/do_i_wanna_know/drumsep/: onset_times_crash.json  onset_times_full.json  onset_times_hh.json  onset_times_kick.json  onset_times_ride.json  onset_times_snare.json  onset_times_toms.json
experiments/results/do_i_wanna_know/melband_bleedless/: pitch_track.json
experiments/results/feel_good_inc/: comparison.json  comparison_v2.json
experiments/results/feel_good_inc/bs_roformer_viperx/: pitch_track.json
experiments/results/feel_good_inc/demucs_htdemucs/: onset_times.json  pitch_track.json
experiments/results/feel_good_inc/drumsep/: onset_times_crash.json  onset_times_hh.json  onset_times_kick.json  onset_times_ride.json  onset_times_snare.json  onset_times_toms.json
experiments/results/feel_good_inc/kuielab_b_drums/: onset_times.json
experiments/results/feel_good_inc/melband_bleedless/: pitch_track.json
experiments/results/feel_good_inc/melband_roformer/: pitch_track.json
songviz/: analyze.py  bench.py  cli.py  eval.py  features.py  ffmpeg.py  ingest.py  lyrics.py  paths.py  pipeline.py  reduction.py  render.py  sonify.py  stems.py  story.py  tap.py  tidy.py  ui.py  viz.py
tests/: conftest.py  test_analysis.py  test_bench.py  test_drumsep.py  test_eval.py  test_lyrics.py  test_reduction.py  test_render_stems_grid.py  test_song_id.py  test_sonify.py  test_story.py  test_tap.py
